Fix portrait orientation images width on mobile

--- a/style.css
+++ b/style.css
@@ -427,6 +427,11 @@ main {
     padding: 0px 20px;
   }
 
+  .portrait img {
+    width: 50vw;
+    height: auto;
+  }
+
 }
 
 @media only screen and (min-width: 1800px) {
